# libhdbpp-timescale

./: .clang-format  .clang-tidy  .gitmodules  CHANGELOG.md  CMakeLists.txt  README  README.md
benchmark/: CMakeLists.txt  DbInsertionTests.cpp  QueryBuilderTests.cpp
cmake/: libhdbpp-timescaleConfig.cmake.in
db-schema/: admin_user.sql  schema.sql  schema_updated.sql  users.sql
doc/: Build.md  DbSchemaConfig.md  Install.md  README.md  build.md  configuration.md  db-schema-config.md  install.md
include/hdb++/: AbstractDB.h  HdbClient.h  HdbppTimescaleDb.hpp
src/: AttributeName.cpp  AttributeName.hpp  AttributeTraits.cpp  AttributeTraits.hpp  CMakeLists.txt  ColumnCache.hpp  ConnectionBase.hpp  DbConnection.cpp  DbConnection.hpp  DbConnection.tpp  Exceptions.hpp  HdbClient.cpp  HdbClient.h  HdbppDefines.hpp  HdbppTimescaleDb.cpp  HdbppTimescaleDb.hpp  HdbppTimescaleDbApi.cpp  HdbppTimescaleDbApi.hpp  HdbppTimescaleDbImpl.cpp  HdbppTimescaleDbImpl.hpp  HdbppTxBase.hpp  HdbppTxDataEvent.hpp  HdbppTxDataEventBase.hpp  HdbppTxDataEventError.hpp  HdbppTxFactory.hpp  HdbppTxHistoryEvent.hpp  HdbppTxNewAttribute.hpp  HdbppTxParameterEvent.hpp  HdbppTxUpdateTtl.hpp  LibUtils.cpp  LibUtils.hpp  PqxxExtension.cpp  PqxxExtension.hpp  QueryBuilder.cpp  QueryBuilder.hpp  TangoValue.hpp  TimescaleSchema.hpp
test/: AttributeNameTests.cpp  AttributeTraitsTests.cpp  CMakeLists.txt  ColumnCacheTests.cpp  DbConnectionTests.cpp  HdbppTimescaleDbTests.cpp  HdbppTxBaseTests.cpp  HdbppTxDataEventErrorTests.cpp  HdbppTxDataEventTests.cpp  HdbppTxHistoryEventTests.cpp  HdbppTxNewAttributeTests.cpp  HdbppTxParameterEventTests.cpp  HdbppTxUpdateTtlTests.cpp  QueryBuilderTests.cpp  TestHelpers.cpp  TestHelpers.hpp  main.cpp  scratch.cpp
